fix: eliminate reflection overhead, redundant secClient calls, and N+1 cascades
BeanInspector:
- cache @MessageMapping methods at startup via @PostConstruct (fixes per-call
  reflection + AntPathMatcher allocation)
- replace wildcard imports, remove dead RequestMapping import

ShoppingItemRepository:
- add bulk UPDATE methods markAllDeletedByAmountTypeId / markAllDeletedByCategoryId
  with flushAutomatically/clearAutomatically flags

WebSocketAmountTypeService / WebSocketCategoryService / WebSocketShoppingItemService:
- remove secClient.putUser() call on every CRUD operation (fixes SecService overload)
- replace lazy-load cascade (getShoppingItemList().forEach) with bulk repository query
- change post* to throw IllegalArgumentException instead of silently delegating to put*

WebSocketUtilService:
- fix syncEntities: add inserted entities to dbList so client receives server-side IDs
- remove setDeleted from copyProperties (not relevant for sync)

ConnectionBroker: null-safe BODY header parsing (prevents NPE)
MessageValidator: add default case to switch (rejects unknown commands)
WebSocketHandler: remove broken buffer reset logic for partial messages

application.properties: clean up dead config, add flyway baseline settings
pom.xml: add explicit start-class / mainClass
.gitignore: add bugs.csv, analiza-zalozenia.txt